Add correct database connection strings

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,7 @@
-#spring.datasource.url=jdbc:sqlserver://restaurantassistant.database.windows.net:1433;database=restaurants_db;user=CloudSA5b9a62f4@restaurantassistant;password=mwp4ETGg3tNnj5i;encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
-#spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
-#spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
-server.port=${PORT:8080}
+spring.datasource.url=jdbc:sqlserver://restaurantassistant-server.database.windows.net:1433;database=restaurantassistant-database;user=restaurantassistant-server-admin@restaurantassistant-server;password=${ secrets.DB_PSW };encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
+spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
+server.port=${PORT:8081}
 
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
 
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
