Add application.properties fix

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
-spring.datasource.url=jdbc:sqlserver://restaurantassistant-server.database.windows.net:1433;database=restaurantassistant-database;user=restaurantassistant-server-admin@restaurantassistant-server;password=${ secrets.DB_PSW };encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
+spring.datasource.url=jdbc:sqlserver://restaurantassistant-server.database.windows.net:1433;database=restaurantassistant-database;encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
+spring.datasource.username=restaurantassistant-server-admin
+spring.datasource.password=${ secrets.DB_PSW }
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
-server.port=${PORT:8081}
+server.port=${PORT:8080}
