Add JWT authentication

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 spring.datasource.url=jdbc:sqlserver://restaurantassistant-server.database.windows.net:1433;database=restaurantassistant-database;encrypt=true;trustServerCertificate=false;
-spring.datasource.username=restaurantassistant-server-admin@restaurantassistant-server
+spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PSW}
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
 server.port=${PORT:8081}
+spring.security.oauth2.resourceserver.jwt.issuer-uri=https://accounts.google.com
